tests/parser/tests/cases/should_fail/incomplete_spread_pattern/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:3
1 |   [ ..d ] := k;
  |     ^ here
  = note: Expected an expression, however received a `.`.
